немного переделана логика для тг АПИ